--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "express": "^4.16.4",
     "request": "^2.88.0",
+    "router": "^1.3.3",
+    "sync-request": "^6.0.0",
     "xls-to-json-lc": "^0.3.4",
     "xlsx-to-json-lc": "^0.5.0"
   },
